@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-12-25 [C] Removed potentially confusing plus icon in ban manager; adjusted text input sizes for consistent look {TranzNDance}
 2008-12-25 [C] Reorganized admin menu to place related buttons next to each other {TranzNDance}
 2008-12-24 [B] Fixed the json_encode function to properly escape the strings {Abbas}
 2008-12-23 [B] Fixed issue involving display of name field in the report to admin form {TranzNDance}
